k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ping-iam
  labels:
    istio.io/rev: asm-managed
    app.kubernetes.io/part-of: ping-iam
